Add googletest and update assimp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.0.0)
 project(beach VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 17)
 
+
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-include(CTest)
 enable_testing()
+find_package(GTest REQUIRED)
 
 add_library(stbi STATIC C:/pkg/stbi/stb_image_init.cpp)
 target_include_directories(stbi PUBLIC C:/pkg/stbi)
@@ -26,6 +27,7 @@ add_custom_target(copy_resources ALL
                     COMMENT "Copy resources to build tree" VERBATIM)
 
 add_subdirectory(src)
+add_subdirectory(test)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
