Update test to hit actual code.  Do some clang-format

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,16 @@
 add_executable(
-  hello_test
-  test.cpp
+  beach_test
+  test_camera.cpp
 )
 
+target_include_directories(beach_test PUBLIC "${CMAKE_SOURCE_DIR}/src" "C:/include" )
+
 target_link_libraries(
-  hello_test
+  beach_test
+  glad
   GTest::gtest
   GTest::gtest_main
 )
 
 include(GoogleTest)
-gtest_discover_tests(hello_test)
+gtest_discover_tests(beach_test)
